# typer-helptree

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
assets/: typer-helptree_v0.2.7_tree_20260327_000349.txt  typer-helptree_v0.2.7_tree_20260327_000443.json
docs/: CHANGELOG.md
fluff/typertree/: README.md  pyproject.toml
fluff/typertree/src/typertree/: __init__.py  cli.py  core.py  helpers.py
scripts/: typertree-build.sh
src/typer_helptree/: VERSION  __init__.py  _version.py  cli.py  cli_helptree.py  datacopy.py  helpers.py  helptree.py  io.py  utils.py  version_info.py
src/typer_helptree.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
