[project]
name = "typer-helptree"
version = "0.1.0"
description = "Display your entire CLI structure, beautifully. Screenshot ready."
readme = "README.md"

requires-python = ">=3.9"
dependencies = [
    "pyhabitat>=1.1.18",
    "rich>=14.2.0",
    "typer>=0.20.0",
]

license = "MIT AND AGPL-3.0-or-later"
license-files = ["LICENSE", "LICENSE-MIT", "LICENSE-AGPL3"]

classifiers=[
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers", # library and documentation
    "Environment :: Console",
    "Typing :: Typed",
    "Development Status :: 4 - Beta",
    #"Development Status :: 5 - Production/Stable",
]

authors = [
    { name = "George Clayton Bennett", email = "george.bennett@memphistn.gov" },
]
maintainers = [
    { name = "George Clayton Bennett", email = "george.bennett@memphistn.gov" },
]

keywords = [
    "typer",
    "help",
    "treehelp",
    "helptree",
    "rich",
    "cli",
]

[project.urls]
Homepage = "https://github.com/city-of-memphis-wastewater/typer-helptree"
Repository = "https://github.com/city-of-memphis-wastewater/typer-helptree"
Issues = "https://github.com/city-of-memphis-wastewater/typer-helptree/issues"
Changelog = "https://raw.githubusercontent.com/city-of-memphis-wastewater/typer-helptree/main/docs/CHANGELOG.md"

[project.scripts]
typer-helptree = "typer-helptree.cli:app"

#[project.optional-dependencies]

# add with `uv sync --group dev`, plus other extras, like `--extra pdfium`
[dependency-groups]
dev = [
    "build>=1.3.0",
    "pyinstaller>=6.17.0 ; platform_system == 'Linux' and platform_machine != 'aarch64'", # to avoid on termux
    "shiv>=1.0.8",
    "ruff>=0.7.0 ; platform_system == 'Linux' and platform_machine != 'aarch64'", # to avoid on termux
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]


[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

